[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-prep"
version = "0.1.0"
description = "Interview preparation project"
readme = "README.md"
requires-python = ">=3.13"

authors = [
  { name = "Karan Kumar", email = "karankum451@gmail.com" }
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]
